add endpoint to get user role
